# Task-scheduler-django

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  manage.py  nginx.conf  pyproject.toml
auth_service/: Dockerfile  requirements.txt
auth_service/src/conf/: settings.py
auth_service/src/tests/: test_models.py
calendar_service/: Dockerfile  requirements.txt
calendar_service/src/calendar_app/: apps.py
calendar_service/src/conf/: settings.py
calendar_service/src/tests/: test_models.py
docker/: Dockerfile
email_service/: requirements.txt
email_service/src/: manage.py
email_service/src/conf/: celery.py  settings.py
email_service/src/email_app/: Enums.py  apps.py  models.py  pytest.ini  signals.py  tasks.py
email_service/src/email_app/tests/: conftest.py  test_models.py  test_tasks.py
email_service/src/tests/: test_models.py
project/: settings.py  urls.py
task_scheduler_django/: asgi.py  settings.py  urls.py  wsgi.py
tasks/: models.py
tests/: test_models.py
